<resources>
    <string name="app_name">MyProject</string>
    <string name="get_started">Get Started</string>
    <string name="what_you_do_today">What a your going to do today...</string>
    <string name="title_text">Self. Gratitiude. Journal</string>
    <string name="greatful_text">What are you grateful for today?</string>
    <string name="email_hint">Your email here..</string>
    <string name="password_hint">Your password</string>
    <string name="login_text">LOGIN</string>
    <string name="choose_button_text">Or</string>
    <string name="create_account_text">CREATE ACCOUNT</string>
    <string name="create_account">Create Account</string>
    <string name="title">What about this post..</string>
    <string name="thoughts">Your thoughts...</string>
    <string name="your_username">Your username..</string>
    <string name="add_new_post">Add new Post</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_post_text">There is no post! Add at least One</string>
</resources>
