<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccount">
    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/username_account"
            android:layout_marginTop="15dp"
            android:inputType="textPersonName"
            android:hint="@string/password_hint"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <AutoCompleteTextView
            android:id="@+id/email_account"
            android:layout_marginTop="15dp"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/password_account"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/create_acc_button_login"
            android:text="@string/create_account"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent"/>
    </LinearLayout>
</LinearLayout>